[BUGFIX] Prevent collapsing of frames - fixes #618

--- a/Resources/Public/Less/Theme/frame.less
+++ b/Resources/Public/Less/Theme/frame.less
@@ -156,7 +156,8 @@
     }
 }
 .make-frame-spacing(@name) {
-    .@{name}.frame-space-after-none:not(.frame-ruler-after) + .@{name}.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage) {
+    .@{name}.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage)
+    + .@{name}.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage) {
         &:extend(.frame-collapsible);
     }
 }
